--- a/css/frm_blocks.css
+++ b/css/frm_blocks.css
@@ -65,3 +65,13 @@
 .frm-admin-loading {
 	width: 200px;
 }
+
+.editor-styles-wrapper .frm_repeat_buttons i {
+	/* Avoid font-style: italic conflicts. The +/- icon should not be italic */
+	font-style: unset;
+}
+
+.editor-styles-wrapper .wp-block-post-content .with_frm_style .frm_repeat_buttons .frm_button {
+	/* Prevent blue anrchor text in Add/Remove buttons */
+	color:var(--submit-text-color) !important;
+}
