--- a/css/frm_blocks.css
+++ b/css/frm_blocks.css
@@ -74,5 +74,6 @@
 .editor-styles-wrapper .wp-block-post-content .with_frm_style .frm_repeat_buttons .frm_button {
 	/* Prevent blue anchor text in Add/Remove buttons */
 	color: var(--submit-text-color) !important;
+	/* Ensure consistent background color on focus for Add/Remove buttons */
 	background: var(--submit-bg-color) !important;
 }
