Adjust field button size to full width in builder

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -7566,6 +7566,11 @@ input[disabled],
 	color: var(--grey-900) !important;
 }
 
+/* Adjust field button size to full width in builder */
+#frm-insert-fields li a {
+	display: flex !important;
+}
+
 .frmbutton.ui-draggable-dragging a {
 	border: 1px solid var(--grey-300);
 	box-shadow: var(--box-shadow-md);
