--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -6129,6 +6129,18 @@ span.howto {
 	display: none;
 }
 
+#frm_builder_page .frm-lite-credit-card-element {
+	position: relative;
+}
+
+#frm_builder_page .frm-lite-credit-card-element > div {
+	position: absolute;
+	top: calc( 50% - 1px);
+	transform: translateY(-50%);
+	right: 10px;
+	color: #d0d4dd;
+}
+
 #frm_builder_page #frm_field_group_controls {
 	position: absolute;
 	padding: 5px;
