--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -7749,7 +7749,8 @@ h2 .frm-sub-label {
 
 .frm-views-editor-body .ui-widget-overlay,
 .frm-white-body .ui-widget-overlay,
-.toplevel_page_formidable .ui-widget-overlay {
+.toplevel_page_formidable .ui-widget-overlay,
+.formidable_page_formidable-payments .ui-widget-overlay {
 	position: fixed;
 	width: 100%;
 	height: 100%;
