--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -2221,8 +2221,7 @@ h2.frm-h2 + .howto {
 	padding: 10px 20px;
 }
 
-.frm-modal .postbox,
-#frm_new_form_modal .postbox {
+.frm-modal .postbox {
 	max-height: 600px;
 	overflow: hidden;
 	margin-bottom: 0;
@@ -2299,81 +2298,6 @@ body.frm-body-with-open-modal {
 	overflow-y: hidden;
 }
 
-#frm_new_form_modal .postbox > div.inside {
-	max-height: 490px;
-	overflow-y: auto;
-	overflow-x: hidden;
-	margin: 0;
-	padding: 10px 0 0;
-}
-
-#frm_new_form_modal .postbox > div.inside .cta-inside {
-	overflow-y: auto;
-	height: auto;
-	padding: 0 var(--gap-md);
-}
-
-#frm_new_form_modal .accordion-container {
-	width: 100%;
-}
-
-.frm-templates-list {
-	margin-top: 0;
-}
-
-.frm-templates-list.frm_grid_container li {
-	margin-bottom: 0;
-}
-
-.frm-templates-list li {
-	vertical-align: top;
-	position: relative;
-	box-sizing: border-box;
-	border-radius: 6px;
-	border: 1px solid transparent;
-	text-align: left;
-}
-
-.frm-templates-list li:not(.frm_hidden) {
-	display: inline-block;
-}
-
-.frm-templates-list.frm-categories-list li {
-	width: 100%;
-}
-
-.frm-templates-list li.frm-selectable {
-	cursor: pointer;
-}
-
-.frm-templates-list li.frm-selectable:hover {
-	background: var(--light-blue);
-	border-color: rgba(65, 153, 253, 0.5);
-}
-
-.frm-templates-list li.frm-selectable:hover h3,
-.frm-templates-list li.frm-selectable:hover p {
-	max-width: calc( 100% - 65px );
-}
-
-.frm-templates-list .frm-featured-form {
-	display: flex;
-	width: 100%;
-}
-
-.frm-templates-list li .frm-featured-form {
-	padding: 7px 5px;
-}
-
-.frm-templates-list li li > div {
-	padding-left: 0;
-}
-
-.frm-templates-list li > div > div {
-	vertical-align: middle;
-}
-
-.frm-templates-list .frm-inner-circle,
 .frm-category-icon, /* Deprecated */
 .frm-icon-wrapper {
 	background: var(--primary-500);
@@ -2389,114 +2313,9 @@ body.frm-body-with-open-modal {
 	display: inline-flex;
 }
 
-.frm-templates-list .frm-inner-circle .frmsvg {
-	vertical-align: top;
-}
-
-.frm-templates-list li .frm-category-icon {
-	overflow: hidden;
-	align-self: flex-start;
-}
-
-.frm-templates-list .frm-template-details {
-	/* the content container to the right of the icon in Create new form modal */
-	display: inline-block;
-	width: calc( 100% - 40px );
-	padding-left: var(--gap-sm);
-	box-sizing: border-box;
-	transform: translateY(-2px);
-}
-
-.frm-templates-list li h3,
-.frm-templates-list li p {
-	text-align: left;
-	margin: 0;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	overflow: hidden;
-}
-
-.frm-templates-list li h3,
-.frm-templates-list .frm-install-template h3 {
-	font-size: var(--text-sm) !important;
-}
-
-.frm-templates-list .frm-install-template div {
-	text-align: left;
-}
-
-#frm_new_form_modal .frm-search {
-	width: 100%;
-	margin: var(--gap-sm) 0 var(--gap-md);
-}
-
-#frm_leave_email,
-#frm_code_from_email
-{
-	width: 480px;
-}
-
-#frm_new_form_modal #template-search-input {
-	width: 100%;
-}
-
-#frm-email-block .frm-with-left-icon .frmsvg {
-	padding: 0;
-	top: 0;
-	left: 13px;
-}
-
-#frm_new_form_modal .accordion-container {
-	display: inline-block;
-	padding: 0;
-	border-top: 1px solid var(--grey-300);
-	box-sizing: border-box;
-	margin: 0 5px;
-	width: calc( 100% - 10px );
-}
-
-#frm_new_form_modal .accordion-section-title {
-	padding: 0;
-}
-
-#frm_new_form_modal .accordion-section-title:hover,
-.control-section:hover .accordion-section-title,
-#frm_new_form_modal .accordion-section.open .accordion-section-title
-{
+.control-section:hover .accordion-section-title {
 	background: #fff !important;
 	border-bottom-color: transparent;
-}
-
-#frm_new_form_modal .accordion-section.open:hover {
-	border-bottom-color: transparent;
-}
-
-#frm_new_form_modal .accordion-section {
-	padding: 8px 0 4px;
-}
-
-#frm_new_form_modal .accordion-section + .accordion-section {
-    border-top: 1px solid var(--grey-300);
-    border-radius: 0;
-}
-
-.frm-templates-list.frm-categories-list li > div > div:last-child,
-#frm_new_form_modal .accordion-section .frm-featured-form
-{
-	padding-left: 0;
-}
-
-#frm_new_form_modal .frm-templates-list.frm-categories-list .accordion-section-title {
-	padding-left: var(--gap-sm);
-}
-
-#frm_new_form_modal .frm-templates-list.frm-categories-list li.frm-selectable {
-	padding: 0 10px;
-	overflow: hidden;
-}
-
-#frm_new_form_modal .accordion-section-content {
-	padding: var(--gap-sm);
 }
 
 .frm-hover-icons {
@@ -2513,14 +2332,6 @@ body.frm-body-with-open-modal {
 	gap: 5px;
 }
 
-.frm-ready-made-solution .frm-hover-icons {
-	visibility: hidden;
-}
-
-.frm-ready-made-solution:hover .frm-hover-icons {
-	visibility: visible;
-}
-
 .frm-hover-icons a {
 	width: 22px;
 	height: 22px;
@@ -2534,16 +2345,6 @@ body.frm-body-with-open-modal {
 	text-align: center;
 }
 
-.frm-hover-icons > .frm-preview-form,
-.frm-hover-icons > .frm-delete-form {
-	border: 1px solid var(--primary-500);
-}
-
-.frm-hover-icons > .frm-create-form,
-.frm-ready-made-solution .frm-hover-icons a {
-	background-color: var(--primary-500);
-}
-
 .frm-hover-icons > a .frmsvg {
 	width: 14px;
 	height: 14px;
@@ -2553,32 +2354,6 @@ body.frm-body-with-open-modal {
 .frm-hover-icons > .frm-preview-form .frmsvg,
 .frm-hover-icons > .frm-delete-form .frmsvg {
 	color: var(--primary-500);
-}
-
-.frm-hover-icons > .frm-unlock-form {
-	background-color: var(--primary-500);
-}
-
-.frm-hover-icons > .frm-unlock-form .frmsvg {
-	background-color: var(--primary-500);
-}
-
-.frm-ready-made-solution .frmsvg {
-	width: 14px;
-	height: 14px;
-}
-
-.frm-hover-icons .frm-create-form svg,
-.frm-ready-made-solution .frm-hover-icons svg {
-	color: #fff;
-}
-
-.frm-hover-icons .frm-create-form:hover,
-.frm-ready-made-solution .frm-hover-icons a:hover,
-.frm-hover-icons > .frm-unlock-form:hover,
-.frm-hover-icons > .frm-unlock-form:hover .frmsvg
-{
-	background-color: var(--primary-700) !important;
 }
 
 .frm-hover-icons .frm-preview-form:hover,
@@ -2600,19 +2375,6 @@ body.frm-body-with-open-modal {
 	color: var(--grey-500);
 }
 
-#frm_new_form_modal .frm-use-this-template {
-	margin-left: 10px;
-}
-
-#frm_new_form_modal #frm-preview-block {
-	padding: var(--gap-md) var(--gap-lg);
-	overflow-x: hidden;
-}
-
-#frm_new_form_modal #frm-details-block {
-	padding: var(--gap-md) var(--gap-lg);
-}
-
 .frm-modal-back {
 	cursor: pointer;
 	margin-right: 4px;
@@ -2620,19 +2382,6 @@ body.frm-body-with-open-modal {
 
 .frm-modal-cancel {
 	float: left;
-}
-
-.frm-plan-required-tag {
-	margin-left: 5px;
-	transform: translateY(-1px);
-	background: #FDE6DE;
-	color: #F15A24;
-}
-
-.frm-ready-made-solution .frm-meta-tag {
-	width: fit-content;
-	background: #FDE6DE;
-	color: #F15A24;
 }
 
 .frm-meta-tag {
@@ -2645,113 +2394,16 @@ body.frm-body-with-open-modal {
 	line-height: 12px;
 }
 
-#frm_new_form_modal.frm-expired #frm-create-block,
-#frm_new_form_modal.frm-expiring #frm-create-block {
-    max-height: 450px;
-}
-
 #frm-create-footer {
     padding: 15px 20px;
 }
 
-#frm_code_from_email_options {
-	margin-top: 20px;
-}
-
-#frm_code_from_email_options * {
-	color: var(--primary-500);
-}
-
-#frm-email-block p,
-#frm-code-block p,
-#frm-renew-block p
-{
-	padding: 0 40px;
-	max-width: 400px;
-	margin: 0 auto 20px;
-}
-
-li .frm-hover-icons .frm-preview-form,
-.frm-hover-icons .frm-unlock-form,
-.frm-locked-template .frm-hover-icons .frm-create-form,
-#frm_new_form_modal .frm-modal-back ~ span,
-#frm_new_form_modal .postbox > div:first-child ~ div,
-.frm-modal-back,
-#frm_new_form_modal:not([frm-page="create"]) a.dismiss,
-#frm_code_from_email_error span,
-#frm_leave_email_error span,
-#frm_new_form_modal .frm-delete-form,
-#frm-details-block #frm-new-template button,
-#frm-create-title span[frm-type="template"],
-#frm-create-title[frm-type="template"] span[frm-type="form"]
-{
+.frm-modal-back {
 	display: none;
-}
-
-#frm_new_form_modal:not([frm-page="create"]) .frm-modal-back,
-#frm_new_form_modal[frm-page="create"] #frm-create-title,
-#frm-create-title[frm-type="template"] span[frm-type="template"],
-#frm_new_form_modal[frm-page="preview"] #frm-preview-title,
-#frm_new_form_modal[frm-page="details"] #frm-create-title,
-#frm_new_form_modal[frm-page="upgrade"] #frm-upgrade-title,
-#frm_new_form_modal[frm-page="email"] #frm-email-title,
-#frm_new_form_modal[frm-page="code"] #frm-email-title,
-#frm_new_form_modal[frm-page="renew"] #frm-renew-title,
-#frm_code_from_email_error[frm-error="wrong-code"] span[frm-error="wrong-code"],
-#frm_code_from_email_error[frm-error="empty"] span[frm-error="empty"],
-#frm_code_from_email_error[frm-error="custom"] span[frm-error="custom"],
-#frm_leave_email_error[frm-error="invalid"] span[frm-error="invalid"],
-#frm_leave_email_error[frm-error="empty"] span[frm-error="empty"]
-{
-	display: inline-block;
-}
-
-.frm-locked-template .frm-hover-icons .frm-unlock-form,
-li[data-preview] .frm-hover-icons .frm-preview-form,
-#frm_new_form_modal .frm-selectable[data-custom="1"] .frm-hover-icons .frm-delete-form {
-	display: inline-flex;
-}
-
-#frm_new_form_modal[frm-page="create"] #frm-create-block,
-#frm_new_form_modal[frm-page="preview"] #frm-preview-block,
-#frm_new_form_modal[frm-page="details"] #frm-details-block,
-#frm_new_form_modal[frm-page="upgrade"] #frm-upgrade-block,
-#frm_new_form_modal[frm-page="email"] #frm-email-block,
-#frm_new_form_modal[frm-page="code"] #frm-code-block,
-#frm_new_form_modal[frm-page="renew"] #frm-renew-block,
-#frm_new_form_modal[frm-page="create"] #frm-create-footer,
-#frm_new_form_modal[frm-page="preview"] #frm-preview-footer,
-#frm_new_form_modal[frm-page="details"] #frm-details-footer,
-#frm_new_form_modal[frm-page="upgrade"] #frm-upgrade-footer,
-#frm_new_form_modal[frm-page="email"] #frm-email-footer,
-#frm_new_form_modal[frm-page="code"] #frm-code-footer,
-#frm_new_form_modal[frm-page="renew"] #frm-renew-footer
-{
-	display: block;
 }
 
 .frm-modal-back svg {
 	color: #7F7F7F;
-}
-
-#frm-upgrade-body-list-wrapper > div {
-	display: inline-block;
-	width: calc( 100% / 3 );
-	vertical-align: top;
-	text-align: left;
-	margin-bottom: 10px;
-}
-
-#frm-upgrade-body-list-wrapper ul {
-	padding-left: 40px;
-}
-
-#frm-upgrade-body-list-wrapper ul li:before {
-	content: "\2022";
-	color: var(--primary-500);
-	display: inline-block;
-	width: 1em;
-	margin-left: -1em;
 }
 
 /* Embed Form Modal */
@@ -3294,19 +2946,13 @@ a.frm_option_icon:hover::before {
 }
 
 .frm-right-panel .accordion-section-title:before,
-.frm-right-panel .accordion-section-title:after,
-#frm_new_form_modal .accordion-section-title:after
-{
+.frm-right-panel .accordion-section-title:after {
 	content: "\e913" !important;
 	font-family: "s11-fp" !important;
 	font-size: 18px;
 	font-variant: normal;
 	text-rendering: auto;
 	vertical-align: text-top;
-}
-
-#frm_new_form_modal .accordion-section.open .accordion-section-title:after {
-	transform: rotate(90deg);
 }
 
 .frm-right-panel .accordion-section-title:after {
@@ -9133,55 +8779,6 @@ Responsive Design
 
 .frm-banner-dismiss .frmsvg {
 	vertical-align: top;
-}
-
-.frm-ready-made-solution:not(.frm-search-result) {
-	display: none !important;
-}
-
-#frm_new_form_modal .frm-ready-made-solution {
-	padding: var(--gap-xs) !important;
-	margin: var(--gap-xs) 0 var(--gap-sm);
-	display: flex;
-	gap: var(--gap-sm);
-	position: relative;
-	overflow: visible !important;
-}
-
-#frm_new_form_modal .frm-ready-made-solution:after {
-	width: 100%;
-	height: 1px;
-	background: var(--grey-300);
-	content: '';
-	position: absolute;
-	bottom: -10px;
-	left: 0;
-}
-
-#frm_new_form_modal .frm-ready-made-solution.frm-search-result:last-of-type::after {
-	content: none;
-}
-
-#frm_new_form_modal .frm-solution-details {
-	flex: 1;
-	display: flex;
-	gap: var(--gap-2xs);
-	flex-direction: column;
-}
-
-#frm_new_form_modal .frm-ready-made-solution > div:first-child {
-	width: 30%;
-	text-align: center;
-}
-
-.frm-ready-made-solution h3 ~ a {
-	color: var(--primary-500);
-}
-
-.frm-ready-made-solution img {
-	max-width: 100%;
-	display: block;
-	box-shadow: var(--box-shadow-lg);
 }
 
 /* On Submit action */
