--- a/css/frm_blocks.css
+++ b/css/frm_blocks.css
@@ -46,6 +46,16 @@
 	fill: #f05a24;
 }
 
+.frm-block-intro-content .dashicons-feedback,
+.frm-block-intro-content .frm_white_label_icon {
+	width:120px;
+	height:120px;
+}
+.frm-block-intro-content .dashicons-feedback:before,
+.frm-block-intro-content .frm_white_label_icon:before {
+	font-size:120px;
+}
+
 .frm-block-selector-screen {
 	margin-bottom: 15px;
 }
