--- a/css/admin/form-templates.css
+++ b/css/admin/form-templates.css
@@ -190,6 +190,9 @@
 
 /* Templates list */
 #frm-form-templates-page .frm-form-templates-list {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
+	grid-auto-rows: max-content;
 	gap: var(--gap-sm);
 }
 
@@ -210,6 +213,7 @@
 
 /* Templates item */
 #frm-form-templates-page .frm-form-templates-item {
+	grid-column: span 1;
 	display: flex;
 	gap: 10px;
 	border: 1px solid var(--grey-200);
@@ -222,9 +226,7 @@
 	flex-shrink: 0;
 }
 
-#frm-form-templates-page
-	#frm-form-templates-list
-	.frm-form-templates-item-icon {
+#frm-form-templates-page #frm-form-templates-list .frm-form-templates-item-icon {
 	display: none;
 }
 
@@ -269,9 +271,7 @@
 }
 
 #frm-form-templates-page .frm-form-templates-item-favorite-button:hover,
-#frm-form-templates-page
-	.frm-form-templates-favorite-item
-	.frm-form-templates-item-favorite-button {
+#frm-form-templates-page .frm-form-templates-favorite-item .frm-form-templates-item-favorite-button {
 	color: var(--error-500);
 }
 
@@ -298,32 +298,27 @@
 	min-height: var(--h-md);
 }
 
-#frm-form-templates-page
-	.frm-form-templates-item:hover
-	.frm-form-templates-item-description {
+#frm-form-templates-page .frm-form-templates-item:hover .frm-form-templates-item-description {
 	visibility: hidden;
 	opacity: 0;
 }
 
-#frm-form-templates-page
-	.frm-form-templates-item:hover
-	.frm-form-templates-item-buttons {
+#frm-form-templates-page .frm-form-templates-item:hover .frm-form-templates-item-buttons {
 	display: flex;
 	animation: fadeInDownShort 300ms ease-out forwards;
 }
 
-#frm-form-templates-page
-	.frm-form-templates-item:hover
-	.frm-form-templates-item-favorite-button {
+#frm-form-templates-page .frm-form-templates-item:hover .frm-form-templates-item-favorite-button {
 	display: flex;
 	animation: fadeIn 400ms ease-in-out forwards;
 }
 
 /**
-	 * Helpers.
-	 *
-	 */
-#frm-form-templates-page .frm-form-templates-hidden {
+ * Helpers.
+ *
+ */
+
+#frm-form-templates-page .frm_hidden {
 	display: none !important;
 }
 
@@ -345,10 +340,12 @@
 }
 
 @keyframes fadeInUp {
+
 	0% {
 		opacity: 0;
 		transform: translateY(10px);
 	}
+
 	100% {
 		opacity: 1;
 		transform: translateY(0);
@@ -356,10 +353,12 @@
 }
 
 @keyframes fadeInDownShort {
+
 	0% {
 		opacity: 0.4;
 		transform: translateY(-2px);
 	}
+
 	100% {
 		opacity: 1;
 		transform: translateY(0);
@@ -367,9 +366,11 @@
 }
 
 @keyframes fadeIn {
+
 	0% {
 		opacity: 0;
 	}
+
 	100% {
 		opacity: 1;
 	}
@@ -377,15 +378,7 @@
 
 /* Breakpoints */
 @media only screen and (max-width: 782px) {
-	.frm-form-templates-floating-links {
-		right: 20px;
-		bottom: 20px;
-	}
 
-	.frm-form-templates-floating-links-logo-icon {
-		width: 50px;
-		height: 50px;
-	}
 }
 
 /**
@@ -415,9 +408,7 @@
 	padding-left: 0;
 }
 
-#frm-form-templates-page
-	.frm-templates-list.frm-categories-list
-	li.frm-selectable {
+#frm-form-templates-page .frm-templates-list.frm-categories-list li.frm-selectable {
 	padding: 0 10px;
 	overflow: hidden;
 }
@@ -440,10 +431,7 @@
 
 .frm-locked-template .frm-hover-icons .frm-unlock-form,
 li[data-preview] .frm-hover-icons .frm-preview-form,
-#frm-form-templates-page
-	.frm-selectable[data-custom="1"]
-	.frm-hover-icons
-	.frm-delete-form {
+#frm-form-templates-page .frm-selectable[data-custom="1"] .frm-hover-icons .frm-delete-form {
 	display: inline-flex;
 }
 
@@ -459,7 +447,7 @@ li[data-preview] .frm-hover-icons .frm-preview-form,
 	padding-left: 40px;
 }
 
-#frm-upgrade-body-list-wrapper ul li:before {
+#frm-upgrade-body-list-wrapper ul li::before {
 	content: "\2022";
 	color: var(--primary-500);
 	display: inline-block;
@@ -523,7 +511,7 @@ li[data-preview] .frm-hover-icons .frm-preview-form,
 	overflow: visible !important;
 }
 
-#frm-form-templates-page .frm-ready-made-solution:after {
+#frm-form-templates-page .frm-ready-made-solution::after {
 	width: 100%;
 	height: 1px;
 	background: var(--grey-300);
@@ -533,8 +521,7 @@ li[data-preview] .frm-hover-icons .frm-preview-form,
 	left: 0;
 }
 
-#frm-form-templates-page
-	.frm-ready-made-solution.frm-search-result:last-of-type::after {
+#frm-form-templates-page .frm-ready-made-solution.frm-search-result:last-of-type::after {
 	content: none;
 }
 
