Add education for Stripe fees This is a new Pro tip on the Stripe global settings page, and in the payment form action Add a blue version of the pro tips Fix passing $html param for showing pro tips (This adds space below the tip on the form actions tab) Allow a class passed to pro tip container

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -2941,6 +2941,16 @@ a.frm_pro_tip .frmsvg {
 	margin-right: 10px;
 }
 
+.frm-light-tip a.frm_pro_tip {
+	background: var(--primary-25);
+}
+
+.frm-light-tip a.frm_pro_tip .frmsvg,
+.frm-light-tip a.frm_pro_tip i,
+.frm-light-tip .frm-tip-cta {
+	color: var(--primary-500);
+}
+
 .frm-tip-info {
 	flex: 1;
 	text-align: left;
