close button position update when admin bar is visible

--- a/css/frm_overlay.css
+++ b/css/frm_overlay.css
@@ -3,7 +3,7 @@
 	top: 0; left: 0;
 	width: 100%;
 	min-height: 100%;
-	z-index: 999;
+	z-index: 1002;
 	color:white;
 }
 .frm-overlay--wrapper:before {
@@ -26,6 +26,9 @@
 	height: 32px;
 	background: url( '../images/overlay/close-overlay.svg' ) no-repeat;
 	cursor: pointer;
+}
+body.admin-bar .frm-overlay--close {
+	top:40px;
 }
 .frm-overlay--container {
 	text-align: center;
