--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -343,9 +343,12 @@ td.column-title .frm_actions_dropdown {
 #frm_error_modal {
 	display: block;
 }
-/* .frm-error-modal .frm_modal_top {
-	border-bottom: 1px solid var(--grey-border);
-} */
+
+#frm_error_modal .frm_lock_simple {
+	padding: 20px;
+    border-radius: 50%;
+	background-color: var(--primary-25);
+}
 
 .frm-error-modal #frm_lock_simple {
 	color: var(--primary-500);
@@ -354,6 +357,15 @@ td.column-title .frm_actions_dropdown {
 #frm_error_modal.frm_modal_title {
 	font-size: var(--text-xl);
 	font-weight: 400;
+	color: var(--grey-900);
+}
+
+#frm_error_modal .frm-modal-title h2 {
+	font-weight: 600;
+	margin: 0;
+}
+
+#frm_error_modal .frm_modal_content p {
 	color: var(--grey-900);
 }
 
