Update modal title font size

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -362,6 +362,7 @@ td.column-title .frm_actions_dropdown {
 
 #frm_error_modal .frm-modal-title h2 {
 	font-weight: 600;
+	font-size: var(--text-xl);
 	margin: 0;
 }
 
