Clean up and deprecate old code

--- a/css/admin/form-templates.css
+++ b/css/admin/form-templates.css
@@ -481,6 +481,8 @@
 
 /* Code from email modal */
 #frm-code-modal-back-button {
+	cursor: pointer;
+	margin-right: var(--gap-2xs);
 	color: var(--grey-400);
 }
 
