delete all entries modal confirmation

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -28,6 +28,7 @@
 	--primary-hover: var(--primary-700); /* Deprecated */
 	--light-blue: var(--primary-25); /* Deprecated */
 	--blue-border: rgb(188, 224, 253);
+	--error-300: #FECDCA;
 	--error-500: #F04438;
 	--error-700: #B42318;
 	--green: rgb(63, 172, 37);
@@ -9296,3 +9297,31 @@ Responsive Design
 	color: var(--primary-color);
 }
 /* End On Submit action */
+
+/* Delete All Entries Modal Confirmation */
+.frm-delete-all-entires-modal-confirmation {
+	text-align: left;
+}
+.frm-delete-all-entires-modal-confirmation h2 {
+	font-weight: 500;
+}
+.frm-delete-all-entires-modal-confirmation b {
+	color: var(--error-500);
+}
+.frm-delete-all-entires-modal-confirmation input {
+	display: block;
+	width: 100%;
+	height: 36px;
+	box-sizing: border-box;
+	margin-top: var(--gap-sm);
+	border-radius: var(--small-radius);
+	border: 1px solid var(--grey-300);
+}
+#frm-confirmed-click.button.frm-btn-inactive {
+	background-color: var(--error-300) !important;
+	border: 1px solid var(--error-300);
+}
+#frm-confirmed-click.button.frm-btn-inactive:hover {
+	border-color: var(--error-300) !important;
+}
+/* End Delete All Entries Modal Confirmation */
