--- a/css/admin/form-templates.css
+++ b/css/admin/form-templates.css
@@ -398,15 +398,51 @@
 	color: var(--grey-400);
 }
 
-#frm-form-templates-modal .frm-form-templates-modal-inputs {
+#frm-form-templates-modal .frm-form-templates-modal-fieldset {
 	position: relative;
 	margin-top: var(--gap-sm);
 }
 
-#frm-form-templates-modal .frm-form-templates-modal-inputs .frm-with-left-icon .frmsvg {
+#frm-form-templates-modal .frm-form-templates-modal-fieldset .frm-with-left-icon .frmsvg {
 	padding: 0;
 	top: 0;
 	left: 13px;
+}
+
+/* Fixes pro issue #3508, prevent a conflict that hides the postbox in modal */
+#frm-form-templates-modal .postbox {
+	display: block !important;
+}
+
+/* Modal Errors */
+#frm-form-templates-modal .frm-form-templates-modal-error:not(.frm_hidden),
+#frm_code_from_email_options:not(.frm_hidden) {
+	display: flex;
+}
+
+#frm-form-templates-modal .frm-form-templates-modal-error,
+#frm_code_from_email_options {
+	align-items: center;
+	justify-content: center;
+	gap: calc(var(--gap-xs) + var(--gap-2xs));
+}
+
+#frm-form-templates-modal .frm-form-templates-modal-error {
+	color: var(--error-500);
+	margin-top: var(--gap-xs);
+}
+
+#frm_code_from_email_error span,
+#frm_leave_email_error span {
+	display: none;
+}
+
+#frm_code_from_email_error[frm-error="wrong-code"] span[frm-error="wrong-code"],
+#frm_code_from_email_error[frm-error="empty"] span[frm-error="empty"],
+#frm_code_from_email_error[frm-error="custom"] span[frm-error="custom"],
+#frm_leave_email_error[frm-error="invalid"] span[frm-error="invalid"],
+#frm_leave_email_error[frm-error="empty"] span[frm-error="empty"] {
+	display: inline-block;
 }
 
 /* Upgrade Modal */
@@ -496,6 +532,11 @@
 	cursor: pointer;
 	margin-right: var(--gap-2xs);
 	color: var(--grey-400);
+}
+
+#frm_code_from_email_options {
+	color: var(--primary-500);
+	margin-top: var(--gap-sm);
 }
 
 /* Renew account modal */
