--- a/css/admin/form-templates.css
+++ b/css/admin/form-templates.css
@@ -278,6 +278,10 @@
 	color: var(--grey-900);
 }
 
+#frm-form-templates-page .frm-form-templates-favorite-item .frm-form-templates-item-favorite-button {
+	display: flex;
+}
+
 #frm-form-templates-page .frm-form-templates-item-favorite-button:hover,
 #frm-form-templates-page .frm-form-templates-favorite-item .frm-form-templates-item-favorite-button {
 	color: var(--error-500);
@@ -316,7 +320,7 @@
 	animation: fadeInDownShort 300ms ease-out forwards;
 }
 
-#frm-form-templates-page .frm-form-templates-item:hover .frm-form-templates-item-favorite-button {
+#frm-form-templates-page .frm-form-templates-item:not(.frm-form-templates-favorite-item):hover .frm-form-templates-item-favorite-button {
 	display: flex;
 	animation: fadeIn 400ms ease-in-out forwards;
 }
